// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`listEdits: 0 edits 1`] = `[]`;

exports[`listEdits: 1 edits 1`] = `
[
  {
    "change": [
      [
        1,
        "a",
      ],
    ],
    "timestamp": 0,
  },
]
`;

exports[`listEdits: 2 edits 1`] = `
[
  {
    "change": [
      [
        1,
        "a",
      ],
    ],
    "timestamp": 0,
  },
  {
    "change": [
      [
        0,
        1,
      ],
      [
        1,
        "b",
      ],
    ],
    "timestamp": 10,
  },
]
`;

exports[`listEdits: 3 edits 1`] = `
[
  {
    "change": [
      [
        1,
        "a",
      ],
    ],
    "timestamp": 0,
  },
  {
    "change": [
      [
        0,
        1,
      ],
      [
        1,
        "b",
      ],
    ],
    "timestamp": 10,
  },
  {
    "change": [
      [
        0,
        2,
      ],
      [
        1,
        "c",
      ],
    ],
    "timestamp": 20,
  },
]
`;

exports[`listEdits: 4 edits 1`] = `
[
  {
    "change": [
      [
        0,
        1,
      ],
      [
        1,
        "b",
      ],
    ],
    "timestamp": 10,
  },
  {
    "change": [
      [
        0,
        2,
      ],
      [
        1,
        "c",
      ],
    ],
    "timestamp": 20,
  },
  {
    "change": [
      [
        0,
        3,
      ],
      [
        1,
        "d",
      ],
    ],
    "timestamp": 30,
  },
]
`;

exports[`listEdits: 5 edits 1`] = `
[
  {
    "change": [
      [
        0,
        2,
      ],
      [
        1,
        "c",
      ],
    ],
    "timestamp": 20,
  },
  {
    "change": [
      [
        0,
        3,
      ],
      [
        1,
        "d",
      ],
    ],
    "timestamp": 30,
  },
  {
    "change": [
      [
        0,
        4,
      ],
      [
        1,
        "e",
      ],
    ],
    "timestamp": 40,
  },
]
`;

exports[`listEdits: 6 edits 1`] = `
[
  {
    "change": [
      [
        1,
        "abc",
      ],
    ],
    "timestamp": 20,
  },
  {
    "change": [
      [
        0,
        3,
      ],
      [
        1,
        "d",
      ],
    ],
    "timestamp": 30,
  },
  {
    "change": [
      [
        0,
        4,
      ],
      [
        1,
        "e",
      ],
    ],
    "timestamp": 40,
  },
  {
    "change": [
      [
        0,
        5,
      ],
      [
        1,
        "f",
      ],
    ],
    "timestamp": 50,
  },
]
`;

exports[`listEdits: 7 edits 1`] = `
[
  {
    "change": [
      [
        1,
        "abc",
      ],
    ],
    "timestamp": 20,
  },
  {
    "change": [
      [
        0,
        4,
      ],
      [
        1,
        "e",
      ],
    ],
    "timestamp": 40,
  },
  {
    "change": [
      [
        0,
        5,
      ],
      [
        1,
        "f",
      ],
    ],
    "timestamp": 50,
  },
  {
    "change": [
      [
        0,
        6,
      ],
      [
        1,
        "g",
      ],
    ],
    "timestamp": 60,
  },
]
`;

exports[`listEdits: 8 edits 1`] = `
[
  {
    "change": [
      [
        1,
        "abc",
      ],
    ],
    "timestamp": 20,
  },
  {
    "change": [
      [
        0,
        5,
      ],
      [
        1,
        "f",
      ],
    ],
    "timestamp": 50,
  },
  {
    "change": [
      [
        0,
        6,
      ],
      [
        1,
        "g",
      ],
    ],
    "timestamp": 60,
  },
  {
    "change": [
      [
        0,
        7,
      ],
      [
        1,
        "h",
      ],
    ],
    "timestamp": 70,
  },
]
`;

exports[`listEdits: 9 edits 1`] = `
[
  {
    "change": [
      [
        1,
        "abc",
      ],
    ],
    "timestamp": 20,
  },
  {
    "change": [
      [
        0,
        3,
      ],
      [
        1,
        "def",
      ],
    ],
    "timestamp": 50,
  },
  {
    "change": [
      [
        0,
        6,
      ],
      [
        1,
        "g",
      ],
    ],
    "timestamp": 60,
  },
  {
    "change": [
      [
        0,
        7,
      ],
      [
        1,
        "h",
      ],
    ],
    "timestamp": 70,
  },
  {
    "change": [
      [
        0,
        8,
      ],
      [
        1,
        "i",
      ],
    ],
    "timestamp": 80,
  },
]
`;

exports[`listEdits: 10 edits 1`] = `
[
  {
    "change": [
      [
        1,
        "abc",
      ],
    ],
    "timestamp": 20,
  },
  {
    "change": [
      [
        0,
        3,
      ],
      [
        1,
        "def",
      ],
    ],
    "timestamp": 50,
  },
  {
    "change": [
      [
        0,
        7,
      ],
      [
        1,
        "h",
      ],
    ],
    "timestamp": 70,
  },
  {
    "change": [
      [
        0,
        8,
      ],
      [
        1,
        "i",
      ],
    ],
    "timestamp": 80,
  },
  {
    "change": [
      [
        0,
        9,
      ],
      [
        1,
        "j",
      ],
    ],
    "timestamp": 90,
  },
]
`;

exports[`listEdits: 11 edits 1`] = `
[
  {
    "change": [
      [
        1,
        "abc",
      ],
    ],
    "timestamp": 20,
  },
  {
    "change": [
      [
        0,
        3,
      ],
      [
        1,
        "def",
      ],
    ],
    "timestamp": 50,
  },
  {
    "change": [
      [
        0,
        8,
      ],
      [
        1,
        "i",
      ],
    ],
    "timestamp": 80,
  },
  {
    "change": [
      [
        0,
        9,
      ],
      [
        1,
        "j",
      ],
    ],
    "timestamp": 90,
  },
  {
    "change": [
      [
        0,
        10,
      ],
      [
        1,
        "k",
      ],
    ],
    "timestamp": 100,
  },
]
`;

exports[`listEdits: 12 edits 1`] = `
[
  {
    "change": [
      [
        1,
        "abc",
      ],
    ],
    "timestamp": 20,
  },
  {
    "change": [
      [
        0,
        3,
      ],
      [
        1,
        "def",
      ],
    ],
    "timestamp": 50,
  },
  {
    "change": [
      [
        0,
        6,
      ],
      [
        1,
        "ghi",
      ],
    ],
    "timestamp": 80,
  },
  {
    "change": [
      [
        0,
        9,
      ],
      [
        1,
        "j",
      ],
    ],
    "timestamp": 90,
  },
  {
    "change": [
      [
        0,
        10,
      ],
      [
        1,
        "k",
      ],
    ],
    "timestamp": 100,
  },
  {
    "change": [
      [
        0,
        11,
      ],
      [
        1,
        "l",
      ],
    ],
    "timestamp": 110,
  },
]
`;

exports[`listEdits: 13 edits 1`] = `
[
  {
    "change": [
      [
        0,
        3,
      ],
      [
        1,
        "def",
      ],
    ],
    "timestamp": 50,
  },
  {
    "change": [
      [
        0,
        6,
      ],
      [
        1,
        "ghi",
      ],
    ],
    "timestamp": 80,
  },
  {
    "change": [
      [
        0,
        10,
      ],
      [
        1,
        "k",
      ],
    ],
    "timestamp": 100,
  },
  {
    "change": [
      [
        0,
        11,
      ],
      [
        1,
        "l",
      ],
    ],
    "timestamp": 110,
  },
  {
    "change": [
      [
        0,
        12,
      ],
      [
        1,
        "m",
      ],
    ],
    "timestamp": 120,
  },
]
`;

exports[`listEdits: 14 edits 1`] = `
[
  {
    "change": [
      [
        0,
        3,
      ],
      [
        1,
        "def",
      ],
    ],
    "timestamp": 50,
  },
  {
    "change": [
      [
        0,
        6,
      ],
      [
        1,
        "ghi",
      ],
    ],
    "timestamp": 80,
  },
  {
    "change": [
      [
        0,
        11,
      ],
      [
        1,
        "l",
      ],
    ],
    "timestamp": 110,
  },
  {
    "change": [
      [
        0,
        12,
      ],
      [
        1,
        "m",
      ],
    ],
    "timestamp": 120,
  },
  {
    "change": [
      [
        0,
        13,
      ],
      [
        1,
        "n",
      ],
    ],
    "timestamp": 130,
  },
]
`;

exports[`listEdits: 15 edits 1`] = `
[
  {
    "change": [
      [
        0,
        3,
      ],
      [
        1,
        "def",
      ],
    ],
    "timestamp": 50,
  },
  {
    "change": [
      [
        0,
        6,
      ],
      [
        1,
        "ghi",
      ],
    ],
    "timestamp": 80,
  },
  {
    "change": [
      [
        0,
        9,
      ],
      [
        1,
        "jkl",
      ],
    ],
    "timestamp": 110,
  },
  {
    "change": [
      [
        0,
        12,
      ],
      [
        1,
        "m",
      ],
    ],
    "timestamp": 120,
  },
  {
    "change": [
      [
        0,
        13,
      ],
      [
        1,
        "n",
      ],
    ],
    "timestamp": 130,
  },
  {
    "change": [
      [
        0,
        14,
      ],
      [
        1,
        "o",
      ],
    ],
    "timestamp": 140,
  },
]
`;

exports[`listEdits: 16 edits 1`] = `
[
  {
    "change": [
      [
        0,
        6,
      ],
      [
        1,
        "ghi",
      ],
    ],
    "timestamp": 80,
  },
  {
    "change": [
      [
        0,
        9,
      ],
      [
        1,
        "jkl",
      ],
    ],
    "timestamp": 110,
  },
  {
    "change": [
      [
        0,
        13,
      ],
      [
        1,
        "n",
      ],
    ],
    "timestamp": 130,
  },
  {
    "change": [
      [
        0,
        14,
      ],
      [
        1,
        "o",
      ],
    ],
    "timestamp": 140,
  },
  {
    "change": [
      [
        0,
        15,
      ],
      [
        1,
        "p",
      ],
    ],
    "timestamp": 150,
  },
]
`;

exports[`listEdits: 17 edits 1`] = `
[
  {
    "change": [
      [
        0,
        6,
      ],
      [
        1,
        "ghi",
      ],
    ],
    "timestamp": 80,
  },
  {
    "change": [
      [
        0,
        9,
      ],
      [
        1,
        "jkl",
      ],
    ],
    "timestamp": 110,
  },
  {
    "change": [
      [
        0,
        14,
      ],
      [
        1,
        "o",
      ],
    ],
    "timestamp": 140,
  },
  {
    "change": [
      [
        0,
        15,
      ],
      [
        1,
        "p",
      ],
    ],
    "timestamp": 150,
  },
  {
    "change": [
      [
        0,
        16,
      ],
      [
        1,
        "q",
      ],
    ],
    "timestamp": 160,
  },
]
`;

exports[`listEdits: 18 edits 1`] = `
[
  {
    "change": [
      [
        0,
        6,
      ],
      [
        1,
        "ghi",
      ],
    ],
    "timestamp": 80,
  },
  {
    "change": [
      [
        0,
        9,
      ],
      [
        1,
        "jkl",
      ],
    ],
    "timestamp": 110,
  },
  {
    "change": [
      [
        0,
        12,
      ],
      [
        1,
        "mno",
      ],
    ],
    "timestamp": 140,
  },
  {
    "change": [
      [
        0,
        15,
      ],
      [
        1,
        "p",
      ],
    ],
    "timestamp": 150,
  },
  {
    "change": [
      [
        0,
        16,
      ],
      [
        1,
        "q",
      ],
    ],
    "timestamp": 160,
  },
  {
    "change": [
      [
        0,
        17,
      ],
      [
        1,
        "r",
      ],
    ],
    "timestamp": 170,
  },
]
`;

exports[`listEdits: 19 edits 1`] = `
[
  {
    "change": [
      [
        1,
        "abcdefghi",
      ],
    ],
    "timestamp": 80,
  },
  {
    "change": [
      [
        0,
        9,
      ],
      [
        1,
        "jkl",
      ],
    ],
    "timestamp": 110,
  },
  {
    "change": [
      [
        0,
        12,
      ],
      [
        1,
        "mno",
      ],
    ],
    "timestamp": 140,
  },
  {
    "change": [
      [
        0,
        16,
      ],
      [
        1,
        "q",
      ],
    ],
    "timestamp": 160,
  },
  {
    "change": [
      [
        0,
        17,
      ],
      [
        1,
        "r",
      ],
    ],
    "timestamp": 170,
  },
  {
    "change": [
      [
        0,
        18,
      ],
      [
        1,
        "s",
      ],
    ],
    "timestamp": 180,
  },
]
`;
